kubedefs/appdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-app
  labels:
    app: tomcat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers: 
      - name: tomcat
        image: vprocontainers/vprofileapp
        ports:
        - containerPort: 8080
          name: tomcat-port
        resources: 
          requests: 
            cpu: "250m"
            memory: "64Mi"
          limits: 
            cpu: "500m"
            memory: "128Mi"
