kubedefs/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-db
  labels:
    app: db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: walidzaouch/mysqldb
        resources:
          requests:
            memory: "256Mi"
            cpu: "256m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 3306
          name: db-port
        volumeMounts:
        - name: db-data-volume
          mountPath: /var/lib/mysql 
      volumes:
      - name: db-data-volume
        persistentVolumeClaim:
          claimName: db-pv-claim
