kubedefs/mcdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-memc
  labels:
    app: memc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memc
  template:
    metadata:
      labels:
        app: memc
    spec:
      containers:
      - name: memc
        image: memcached
        ports:
        - containerPort: 11211
          name: memcached-port
        resources: 
          requests: 
            cpu: "250m"
            memory: "64Mi"
          limits: 
            cpu: "500m"
            memory: "128Mi"
