kubedefs/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: db01
  labels:
    app: db01
spec:
  type: ClusterIP
  selector:
    app: db # we need to specify the pod name not the deployment name 
  ports:
    - port: 3306
      targetPort: db-port
      protocol: TCP
