kubedefs/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache01 #given it the name expected from application properties 
  labels:
    app: memcached
spec:
  type: ClusterIP
  selector:
    app: memc # we need to specify the pod name not the deployment name 
  ports:
    - port: 11211
      targetPort: memcached-port
      protocol: TCP
