kubedefs/rmqservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: mq01  # Given it the name expected from application properties 
spec:
  type: ClusterIP
  selector:
    app: rmq # we need to specify the pod name not the deployment name 
  ports:
    - port: 5672
      targetPort: rmq-port
      protocol: TCP
